# Function-Cooldowns

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
.github/workflows/: test.yml
cooldowns/: __init__.py  buckets.py  cooldown.py  cooldown_times_per.py  date_util.py  exceptions.py  persistence.py  static_cooldown.py  static_times_per.py  trigger_cooldown.py  utils.py
cooldowns/buckets/: __init__.py  hashable_arguments.py  main.py  slash.py
cooldowns/protocols/: __init__.py  bucket.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/modules/: buckets.doctree  decorators.doctree  examples.doctree  exceptions.doctree  nextcord_slash_cooldowns.doctree  util.doctree
docs/_build/doctrees/modules/objects/: cooldown.doctree  hashable_args.doctree  protocols.doctree  util.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/modules/: examples.rst.txt
docs/_build/html/_sources/modules/objects/: hashable_args.rst.txt
docs/_build/html/modules/: buckets.html  decorators.html  examples.html  exceptions.html  nextcord_slash_cooldowns.html  util.html
docs/_build/html/modules/objects/: cooldown.html  hashable_args.html  protocols.html  util.html
docs/modules/: buckets.rst  decorators.rst  examples.rst  exceptions.rst  nextcord_slash_cooldowns.rst  util.rst
docs/modules/objects/: cooldown.rst  cooldown_times_per.rst  protocols.rst  times_per.rst  trigger_cooldown.rst  util.rst
tests/: conftest.py  test_callable_on_cooldown.py  test_cooldown.py  test_cooldown_times_per.py  test_persistence.py  test_static_cooldown.py  test_static_times_per.py  test_trigger_cooldown.py  test_util.py
