[project]
name = "function-cooldowns"
version = "2.1.0"
description = "A simplistic decorator based approach to rate limiting function calls."
authors = [{name = "Skelmis", email="skelmis.craft@gmail.com"}]
license = "UNLICENSE"
readme = "readme.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry]
packages = [{include = "cooldowns"}]
requires-poetry = ">=2.0"


[project.urls]
"Issue tracker" = "https://github.com/Skelmis/Function-Cooldowns/issues"
Documentation = "https://function-cooldowns.rtfd.io/"
Homepage = "https://github.com/Skelmis/Function-Cooldowns"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
freezegun = "^1.5.1"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
